QmlCompiler: Fix code for object literal generation

We have to use the arguments as base for the run time calculated
members, not the argument count.

Amends commit f839171eefbba670536262fa3b847d24bfdc627b.

Fixes: QTBUG-123613
Change-Id: I3ddc8bc459618bd9a9436d3616c444bf218463a3
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit f47df45b4981d2d3eedfdbcf7574a7d2e2625627)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>